Portfolio boxes overflow fix

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -156,18 +156,6 @@ h1
 	.row-head
 		margin: 2em auto
 
-@media screen and (max-height: 700px)
-	.row-full
-		margin: 0
-		display: flex
-		flex-direction: column
-	.row-3
-		height: auto
-		margin: 5rem auto
-		max-width: 260px
-	.row-head
-		margin: 2em auto
-
 // Portfolio Item
 
 .p-item
@@ -197,10 +185,6 @@ h1
 	margin: 0.5rem 0.5rem
 
 @media screen and (max-width: 768px)
-	.p-item
-		height: auto
-
-@media screen and (max-height: 700px)
 	.p-item
 		height: auto
 
